--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 body{
     font-family: "Montserrat", sans-serif;
+    background: black;
 }
 a{
     color: inherit;
@@ -47,9 +48,20 @@ a{
 .navbar-collapse.collapse.show{
     background: black;
 }
+.w-fit-content{
+    width: fit-content;
+}
 @media(max-width: 990px){
     .logo{
         width: 200px;
+    }
+}
+@media(max-width: 768px){
+    .btn{
+        padding: 8px 20px;
+    }
+    .bg-img{
+        height: 500px;
     }
 }
 @media(max-width:576px){
