--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root{
     --color-corp: #D6F64B;
+    --color-smoke: #848895;
 }
 
 body{
@@ -9,6 +10,7 @@ body{
 }
 a{
     color: inherit;
+    text-decoration: none;
 }
 .nav-link{
     color: white;
@@ -72,8 +74,11 @@ a{
     left: 50%;
     transform: translateX(-50%);
 }
-.img-left{
+.img-left, .img-right{
     top: -100%;
+}
+.img-right{
+    right: 0;
 }
 .text-balance{
     text-wrap: balance;
@@ -125,9 +130,80 @@ a{
 .form-control::placeholder{
     color: rgba(255, 255, 255, 0.5);
 }
+.title-rotate{
+    transform: rotate(-90deg);
+    left: 0;
+}
+.number-custom-transparent{
+    color: transparent;
+    opacity: 1;
+    -webkit-text-stroke: 1px var(--color-corp); 
+    text-stroke: 1px var(--color-corp); 
+    transition: all 0.3s ease;
+}
+.number-custom-transparent:hover{
+    color: var(--color-corp);
+}
+.number-solid{
+    color: var(--color-corp);
+    opacity: 1;
+    transition: all 0.3s ease;
+}
+.number-solid:hover{
+    color: transparent;
+    -webkit-text-stroke: 1px var(--color-corp); 
+    text-stroke: 1px var(--color-corp); 
+}
+.image-slider .splide__slide {
+    transition: all 0.3s ease;
+    transform: scale(0.9);
+}
+
+.image-slider .splide__slide.is-active {
+    transform: scale(1);
+}
+.text-smoke{
+    color: var(--color-smoke);
+}
+/* animations*/
+.hover-scale{
+    transition: all 0.3s ease;
+}
+.hover-scale:hover{
+    transform: scale(1.1);
+}
+.hover-img-rotate .img{
+    transition: all 0.3s ease;
+}
+.hover-img-rotate:hover img{
+    animation: spin 1s ease-in-out;
+}
+@keyframes spin{
+    0% {
+        transform: rotateY(0deg);
+    }
+    50% {
+        transform: rotateY(360deg);
+    }
+    100% {
+        transform: rotateY(720deg);
+    }
+}
+
 @media(max-width: 990px){
     .logo{
         width: 200px;
+    }
+    .number-custom-transparent, .number-solid{
+        font-size: 100px;
+    }
+    .title-rotate{
+        transform: unset;
+        left: unset;
+    }
+    .img-left, .img-right {
+        top: -10%;
+        width: 40%;
     }
 }
 @media(max-width: 768px){
@@ -144,5 +220,8 @@ a{
     }
     .icon-height{
         height: 35px;
+    }
+    .img-left, .img-right {
+        width: 60%;
     }
 }
